# lerobot-sim2real

./: .gitignore  DEBUGGING_NOTES.md  README.md  URDF_VISUALIZER_README.md  calibrate_easy_hec.sh  camera_calibration_integration_plan.md  check_instrinics.py  check_joints.py  compare_camera_views.py  custom_visualization.py  debug_camera_params.py  debug_obs_structure.py  debug_optimize.sh  env_config.json  env_config_usc.json  final_camera_test.py  pyproject.toml  run_easy_hec_web.sh  run_urdf_visualizer.sh  second_order_optimization_options.md  setup.py  so101_sim2real_calibration_test.py  system_id_so100.npy  target_env_config.json  test_camera_debug.py  test_coordinate_systems.py  test_fixed_camera.py  test_red_mask.py  testpyrealsense.py  testrealsense.py  train.sh  tutorial.md  urdf_visualizer.py  verify_extrinsics.py  visualize_camera_orientation.py
docs/: interactive_mask_creation.md  render_urdf_debug.md  zero_shot_rgb_sim2real.md  zero_shot_rgb_sim2real_manual_calibration.md
lerobot_sim2real/config/: real_robot.py
lerobot_sim2real/models/: vision.py
lerobot_sim2real/optim/: optimize_with_better_logging.py  rb_solver_override.py  streaming_optimize.py
lerobot_sim2real/rl/: ppo_rgb.py
lerobot_sim2real/scripts/: camera_alignment.py  camera_alignment2.py  capture_background_image.py  debug_optimize_from_results.py  easyhec_camera_calibration.py  eval_agent.py  eval_agent_rgb.py  eval_ppo_rgb.py  get_real_image.py  move_to_rest.py  opencv_paper_calibration.py  ppo_rgb.py  random_actions.py  record_reset_distribution.py  render_urdf_from_learned_camera.py  so101_sim2real_calibration_test.py  system_id.py  test_camera_calibration_integration.py  testing.py  toy_optimize_squares.py  train_ppo_rgb.py  tune_calibration_offset.py  urdf_visualizer.py  web_easyhec_camera_calibration.py
lerobot_sim2real/utils/: calibration.py  camera.py  urdf_utils.py
quick_script/: alignment.sh  capture_background.sh  eval.sh  maniskill_so100.sh  pypath.sh  record_reset.sh  tensorboard.sh  train.sh
tests/: README.md  __init__.py  test_camera.py  test_optimize_with_better_logging.py  test_rb_solver_override.py  test_urdf_utils.py
(+11 files in other folders)
