[project]
name = "lerobot_sim2real"
version = "0.0.1"
description = "Sim2Real Manipulation with LeRobot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lerobot==0.3.3",
    "mani_skill==v3.0.0b21",
    "tensorboard",
    "wandb",
    "feetech-servo-sdk",         # Required for Feetech motors used by SO100 robot
    "pyrealsense2",              # Required for RealSense cameras
    "fastapi>=0.100.0",          # Required for camera alignment web app
    "uvicorn[standard]>=0.23.0", # ASGI server for FastAPI
    "websockets>=11.0",          # WebSocket support
]

[project.urls]
Homepage = "https://github.com/StoneT2000/lerobot-sim2real"

[build-system]
requires = ["setuptools>=62.3.0"]
build-backend = "setuptools.build_meta"
